fixed the safari horizontal scroll bug

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -44,6 +44,9 @@ $tag-color: $text
 
 // General styles
 
+body
+  overflow-x: hidden
+
 .content
   padding-top: 1.5rem
   h3
